Started working on "About" page  - Moved posts to /posts/  - Many color changes for background  - Removed progress bar (Don't really need that fancy shit)  - Fixed navbar strange behaviours on some screen sizes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.5.1",
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.14",
+    "markdown-it-emoji": "^1.4.0",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.0.0",
     "vuepress": "^0.14.11"
