--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.8.14",
     "markdown-it-emoji": "^1.4.0",
     "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.1.2",
     "tailwindcss": "^1.0.0",
     "vuepress": "^0.14.11"
   }
